# mojoservicelauncher

./: CMakeLists.txt  README.md  bootstrap-node.js  fork_server.js  jslauncher  node_fork_server.upstart  node_spawner.cc  palm_bus_config.json  run-js-service  sources.json
desktop-support/: jslauncher  node_fork_server.upstart  run-js-service
files/launch/: node_fork_server  node_fork_server.conf
